added mobile css

--- a/filters.html
+++ b/filters.html
@@ -58,7 +58,7 @@
           placeholder="Enter a number"
           min="0"
         />
-        <button onclick="confirmSelection('distance')" class="confirm-btn">
+        <button onclick="confirmSelection('price')" class="confirm-btn">
           Confirm
         </button>
       </section>
@@ -87,7 +87,7 @@
           placeholder="Enter a number"
           min="0"
         />
-        <button onclick="confirmSelection('distance')" class="confirm-btn">
+        <button onclick="confirmSelection('rating')" class="confirm-btn">
           Confirm
         </button>
       </section>
