--- a/collection.html
+++ b/collection.html
@@ -20,11 +20,13 @@
     </header>
 
     <main>
-
+        <div id="restaurant-list"></div>
     </main>
 
     <footer>
 
     </footer>
+
+    <script src="js/collection.js"></script>
 </body>
 </html>
