Updated Landing Page based on Changes Requested

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <p>Let the deck decide where you dine next!</p>
 
                 <div class="hero-buttons">
-                    <button>PICK RANDOM</button>
-                    <button>CHOOSE FILTERS</button>
+                    <button class="button-type1" onclick="location.href='collection.html'">PICK RANDOM</button>
+                    <button class="button-type2" onclick="location.href='filters.html'">CHOOSE FILTERS</button>
                 </div>
             </section>
 
