--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="filters.html">Filters</a></li>
             </ul>
         </nav>
-        <img src="assets/burger-menu.svg" alt="dropdown_icon" class="burger-icon"> <!-- insert burger icon here!-->
+        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon"> <!-- insert burger icon here!-->
     </header>
 
     <main>
