--- a/filters.html
+++ b/filters.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="filter.css">
+    <link rel="stylesheet" href="filters.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/scripts.js"></script>
 
     <title>Restaurant Crisis</title>
