added filter functionality and savetodeck

--- a/collection.html
+++ b/collection.html
@@ -21,6 +21,46 @@
 
     <main>
         <div id="restaurant-list"></div>
+        <section>
+  <label for="filter-cuisine">Cuisine:</label>
+  <select id="filter-cuisine">
+    <option value="">All</option>
+    <option value="Japanese">Japanese</option>
+    <option value="Italian">Italian</option>
+    <option value="Indian">Indian</option>
+    <option value="American">American</option>
+    <option value="Vietnamese">Vietnamese</option>
+    <option value="Chinese">Chinese</option>
+    <option value="French">French</option>
+    <option value="Mexican">Mexican</option>
+    <option value="Korean">Korean</option>
+  </select>
+
+  <label for="filter-price">Price:</label>
+  <select id="filter-price">
+    <option value="">All</option>
+    <option value="$">$</option>
+    <option value="$$">$$</option>
+    <option value="$$$">$$$</option>
+  </select>
+
+  <label for="filter-rating">Min Rating:</label>
+  <select id="filter-rating">
+    <option value="">All</option>
+    <option value="3">3+</option>
+    <option value="4">4+</option>
+    <option value="4.5">4.5+</option>
+  </select>
+
+  <button id="apply-filters">Apply Filters</button>
+</section>
+
+<div id="restaurant-list"></div>
+
+
+
+
+
     </main>
 
     <footer>
