added separate collection and random pages, added clear button functionality,

--- a/filters.html
+++ b/filters.html
@@ -97,7 +97,7 @@
     </main>
     <footer></footer>
 
-    <script src="filters.js"></script>
+    <script src="js/filters.js"></script>
   </body>
 </html>
 
