--- a/random.html
+++ b/random.html
@@ -22,10 +22,9 @@
     </header>
 
     <main>
-    
-      <h2>Your deck</h2>
-      <div id="deck-list"></div>
-      <button id="clear-deck-btn">Clear Deck</button>
+      <h2>Random Reccomendation</h2>
+      <div id="restaurant-list"></div>
+
     </main>
 
     <footer>
