--- a/filters.html
+++ b/filters.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Restaurant Crisis, a card app for discovering new places to eat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="filters.css">
     <link rel="stylesheet" href="css/style.css">
