moved files to folders

--- a/filters.html
+++ b/filters.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="description" content="Restaurant Crisis, a card app for discovering new places to eat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="filters.css">
+    <link rel="stylesheet" href="css/filters.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scripts.js"></script>
+    <script src="js/filters.js"></script>
 
     <title>Restaurant Crisis</title>
   </head>
@@ -98,7 +99,6 @@
     </main>
     <footer></footer>
 
-    <script src="filters.js"></script>
   </body>
 </html>
 
