--- a/swipe.html
+++ b/swipe.html
@@ -22,6 +22,8 @@
       </ul>
     </nav>
     <img src="assets/burger-menu.png" alt="menu" class="burger-icon" />
+      <!-- Saved-count indicator -->
+    <div class="saved-count">0 saved</div>
   </header>
 
   <!-- Swipe Layout -->
@@ -73,5 +75,8 @@
       <button class="button-type2" title="Accept">✅</button>
     </div>
   </main>
+    <!-- Load swipe logic -->
+  <script src="js/scripts.js"></script>
+
 </body>
 </html>
