--- a/swipe.html
+++ b/swipe.html
@@ -10,6 +10,7 @@
   />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/scripts.js"></script>
+  <script src="js/swipe.js"></script>
 </head>
 <body>
   <!-- Header -->
