--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="js/scripts.js"></script>
+    <script src="js/collection.js"></script>
     <title>Restaurant Crisis</title>
 </head>
 <body>
