--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Let the deck decide where you dine next!</p>
 
                 <div class="hero-buttons">
-                    <button class="button-type1" onclick="location.href='collection.html'">PICK RANDOM</button>
+                    <button class="button-type1" onclick="location.href='swipe.html'">PICK RANDOM</button>
                     <button class="button-type2" onclick="location.href='filters.html'">CHOOSE FILTERS</button>
                 </div>
             </section>
