--- a/swipe.html
+++ b/swipe.html
@@ -24,6 +24,8 @@
       </ul>
     </nav>
     <img src="assets/burger-menu.png" alt="menu" class="burger-icon" />
+    <!-- Saved-count indicator -->
+    <div class="saved-count">0 saved</div>
   </header>
 
   <!-- Swipe Layout -->
