Dev-4 Swipe/Accept/Skip Logic (#45)

--- a/swipe.html
+++ b/swipe.html
@@ -9,6 +9,8 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="css/style.css" />
+  <script src="js/scripts.js"></script>
+  <script src="js/swipe.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -38,23 +40,7 @@
 
       <!-- Card -->
       <div id="card-container">
-        <div class="restaurant-card" data-id="1" data-name="Pizza Place">
-          <h2>Restaurant Title</h2>
-          <img
-            src="assets/restaurant.jpg"
-            alt="restaurant"
-            class="card-img"
-          />
-          <div class="details">
-            <span class="rating">⭐ 4.3</span>
-            <span class="distance">📍 10 mi</span>
-          </div>
-          <div class="tags">
-            <span class="tag">cuisine</span>
-            <span class="tag">cuisine</span>
-            <span class="tag">+2</span>
-          </div>
-        </div>
+        
       </div>
 
       <!-- Right Hint -->
