css touchups and added img tags

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <h2 class="card-title">Restaurant Title</h2>
               
                 <div class="card-image">
-                  <img src="assets/sample-restaurant.jpg" alt="Restaurant Preview" />
+                  <img src="assets/restaurant.jpg" alt="Restaurant Preview" />
                 </div>
               
                 <div class="card-info">
                   <div class="info-item">
-                    <img src="assets/star-icon.jpg" alt="Star Rating" class="icon" />
+                    <img src="assets/star-icon.png" alt="Star Rating" class="icon" />
                     <span>4.3</span>
                   </div>
                   <div class="info-item">
-                    <img src="assets/location-icon.jpg" alt="Location Icon" class="icon" />
+                    <img src="assets/location-icon.png" alt="Location Icon" class="icon" />
                     <span>10 mi</span>
                   </div>
                 </div>
@@ -57,7 +57,7 @@
                 <div class="tags">
                   <span class="tag">cuisine</span>
                   <span class="tag">cuisine</span>
-                  <span class="tag">+2</span>
+                  <span class="more">+2</span> 
                 </div>
               </section>
         </div>
