completed dev 7 tasks

--- a/swipe.html
+++ b/swipe.html
@@ -87,6 +87,10 @@
         </div>
       </div>
 
+      <div id="end-screen" style="display: none; text-align: center; margin-top: 20px;">
+        <h2>You've reached the end!</h2>
+      </div>
+
       <!-- Right Reviews -->
       <div class="reviews right">
         <p>"nice clean environment"<br><span>- customer 1</span></p>
@@ -105,9 +109,22 @@
     </div>
 
     <!-- Accept / Reject Buttons -->
-    <div class="swipe-buttons">
+    <div class="swipe-buttons" style="display: flex">
       <button class="button-type2" title="Reject">❌</button>
       <button class="button-type2" title="Accept">✅</button>
+    </div>
+
+    <!-- Reset Button -->
+    <div class="reset-btn">
+      <!-- <button id="reset-btn">Reset Deck</button> -->
+      <button id="reset-btn" style="
+        background-color: #4CAF50; 
+        color: white; 
+        border: none; 
+        padding: 10px 20px; 
+        font-size: 16px; 
+        border-radius: 8px; 
+        ">Reset Deck</button>
     </div>
   </main>
   
