--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="card-title">Restaurant Title</h2>
               
                 <div class="card-image">
-                  <img src="assets/restaurant.jpg" alt="Restaurant Preview" />
+                  <img src="assets/restaurant.jpg" alt="Restaurant Preview" class="restaurant-img"/>
                 </div>
               
                 <div class="card-info">
