finish merging nathans code

--- a/collection.html
+++ b/collection.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scripts.js"></script>
+    <script src="js/collection.js"></script>
     <title>Restaurant Crisis</title>
 </head>
 <body>
@@ -23,7 +24,9 @@
     </header>
 
     <main>
-
+        <h2>Your deck</h2>
+        <div id="deck-list"></div>
+        <button id="clear-deck-btn">Clear Deck</button>
     </main>
 
     <footer>
