--- a/swipe.html
+++ b/swipe.html
@@ -116,15 +116,7 @@
 
     <!-- Reset Button -->
     <div class="reset-btn">
-      <!-- <button id="reset-btn">Reset Deck</button> -->
-      <button id="reset-btn" style="
-        background-color: #4CAF50; 
-        color: white; 
-        border: none; 
-        padding: 10px 20px; 
-        font-size: 16px; 
-        border-radius: 8px; 
-        ">Reset Deck</button>
+       <button class="button-type3">Reset Deck</button>
     </div>
   </main>
   
