fixed more bugs

--- a/collection.html
+++ b/collection.html
@@ -35,7 +35,7 @@
         </label>
       </div>
       <div class="delete-deck-button">
-        <button class="clear-deck-btn" class="button-type3" title="Clear saved deck">
+        <button class="clear-deck-btn" title="Clear saved deck">
         🗑️ Clear Deck
         </button>
       </div>
