Implemented Form Design UI

--- a/filters.html
+++ b/filters.html
@@ -39,6 +39,24 @@
           <button class="skip-btn">Skip</button>
         </section>
 
+        <!-- Progress Indicator -->
+        <div class="progress-container hidden">
+            <div class="progress-steps">
+                <div class="step-indicator active" id="step-cuisine">
+                    <span>Cuisine</span>
+                </div>
+                <div class="step-indicator" id="step-budget">
+                    <span>Budget</span>
+                </div>
+                <div class="step-indicator" id="step-distance">
+                    <span>Distance</span>
+                </div>
+            </div>
+            <div class="progress-bar">
+                <div class="progress-fill" id="progress-fill"></div>
+            </div>
+        </div>
+
         <!-- Cuisine -->
         <section class="filter-options hidden" id="cuisine-options">
           <h2>What cuisines would you like to try?</h2>
