Updated Form Design UI Based on Current Elements

--- a/filters.html
+++ b/filters.html
@@ -25,6 +25,27 @@
     </header>
 
     <main>
+        <!-- Progress Step Bar -->
+        <div class="progress-bar hidden">
+            <div class="step" data-step="cuisine">
+                <span class="step-text">Cuisine</span>
+                <div class="step-line"></div>
+            </div>
+            <div class="step" data-step="price">
+                <span class="step-text">Price</span>
+                <div class="step-line"></div>
+            </div>
+            <div class="step" data-step="distance">
+                <span class="step-text">Distance</span>
+                <div class="step-line"></div>
+            </div>
+            <div class="step" data-step="rating">
+                <span class="step-text">Rating</span>
+                <div class="step-line"></div>
+            </div>
+        </div>
+
+        <!-- Filter Selection -->
         <section class="filter-selection">
           <h2>Filter choices by…</h2>
           <div class="filter-buttons">
