made updates to dev 3 tasks

--- a/swipe.html
+++ b/swipe.html
@@ -45,8 +45,14 @@
       <div id="card-container">
       </div>
 
+      <!-- End Screen -->
+      <div id="end-screen", class="end-screen" style="display: none; text-align: center; margin-top: 20px;">
+        <h2>You've reached the end!</h2>
+      </div>
+
       <!-- Right Reviews -->
       <div id="right-review-container"></div>
+
 
       <!-- Right Hint -->
       <div class="swipe-hint right-hint">
@@ -59,9 +65,14 @@
     </div>
 
     <!-- Accept / Reject Buttons -->
-    <div class="swipe-buttons">
+    <div class="swipe-buttons" style="display: flex">
       <button class="button-type2" title="Reject">❌</button>
       <button class="button-type2" title="Accept">✅</button>
+    </div>
+
+    <!-- Reset Button -->
+    <div class="reset-btn">
+       <button class="button-type3">Reset Deck</button>
     </div>
   </main>
   
