fixed css attributes

--- a/swipe.html
+++ b/swipe.html
@@ -46,7 +46,7 @@
       </div>
 
       <!-- End Screen -->
-      <div id="end-screen", class="end-screen" style="display: none; text-align: center; margin-top: 20px;">
+      <div id="end-screen" class="end-screen">
         <h2>You've reached the end!</h2>
       </div>
 
