--- a/swipe.html
+++ b/swipe.html
@@ -58,6 +58,9 @@
       </div>
     </div>
 
+    <!-- Mobile Review Container -->
+    <div id="mobile-review-container"></div>
+
     <!-- Accept / Reject Buttons -->
     <div class="swipe-buttons">
       <button class="button-type2" title="Reject">❌</button>
