add button to clear user filters and reload swipe page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <main>
        <!-- landing page -->
+
+      </div>
        <div class = "main-grid">
         <section class="hero">
             <h1>SWIPE. SAVOR. REPEAT.</h1>
