--- a/swipe.html
+++ b/swipe.html
@@ -24,11 +24,15 @@
       </ul>
     </nav>
     <img src="assets/burger-menu.png" alt="menu" class="burger-icon" />
-  </header>
 
+  </header>
+    <button id="clear-filters-btn" class="button-type2">
+      Clear Filters
+    </button>
   <!-- Swipe Layout -->
   <main class="swipe-layout">
     <div class="swipe-container">
+      
       <!-- Left Hint -->
       <div class="swipe-hint left-hint">
         <span class="hint-icon">◀</span>
