failed html validation

--- a/swipe.html
+++ b/swipe.html
@@ -26,9 +26,10 @@
     <img src="assets/burger-menu.png" alt="menu" class="burger-icon" />
 
   </header>
-    <button id="clear-filters-btn" class="button-type2">
-      Clear Filters
-    </button>
+  <div class="header-action-bar">
+    <button id="clear-filters-btn" class="button-type2">Clear Filters</button>
+  </div>
+
   <!-- Swipe Layout -->
   <main class="swipe-layout">
     <div class="swipe-container">
@@ -68,7 +69,5 @@
       <button class="button-type2" title="Accept">✅</button>
     </div>
   </main>
-  
-<script src="js/scripts.js"></script>
-</body>
+  </body>
 </html>
