--- a/collection.html
+++ b/collection.html
@@ -48,7 +48,7 @@
               <option value="4">4 Stars</option>
               <option value="3">3 Stars</option>
               <option value="2">2 Stars</option>
-              <option value="1">1 Stars</option>
+              <option value="1">1 Star</option>
             </select>
           </div>
           <div class="filter-group">
