Add hyperlink to home on all navbar logos

--- a/swipe.html
+++ b/swipe.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="assets/app-icon.png" alt="app icon" class="app-icon" />
+    <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
