--- a/collection.html
+++ b/collection.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <img src="assets/app-icon.png" alt="app_icon" class="app-icon"> <!--insert app icon here!-->
-        <!-- nav bar -->
+        <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+0        <!-- nav bar -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
