--- a/filters.html
+++ b/filters.html
@@ -12,7 +12,7 @@
   <body>
     
     <header>
-        <img src="assets/app-icon.png" alt="app_icon" class="app-icon"> 
+      <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
         <!-- nav bar -->
         <nav>
             <ul>
