mostly done with dev3 and 7

--- a/collection.html
+++ b/collection.html
@@ -31,6 +31,8 @@
         <div class="left-body" id="left-body">
           <p class="empty-msg">Click on a card to view details</p>
         </div>
+        <!-- <div  style="display: none;" id="back-button-container"></div> -->
+         <div id="back-button-container"></div>
       </aside>
 
       <!--  Right card list  -->
