--- a/swipe.html
+++ b/swipe.html
@@ -64,7 +64,7 @@
       </div>
 
       <!-- End Screen -->
-      <div id="end-screen" class="end-screen">
+      <div id="end-screen" class="end-screen", style="display: none;">
         <h2>You've reached the end!</h2>
       </div>
 
