cleaned up style.css by removing duplicates and merging the same declaration

--- a/collection.html
+++ b/collection.html
@@ -29,8 +29,6 @@
         <button id="clear-deck-btn">Clear Deck</button>
     </main>
 
-    <footer>
-
-    </footer>
+    <footer></footer>
 </body>
 </html>
