--- a/collection.html
+++ b/collection.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
-0        <!-- nav bar -->
+        <!-- nav bar -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
