--- a/filters.html
+++ b/filters.html
@@ -100,11 +100,11 @@
           <h2>Set minimum rating</h2>
           <form onsubmit="confirmSelection('rating'); return false;">
             <div id="star-rating">
-              <img src="assets/dark-star-icon.png" data-value="1" class="star">
-              <img src="assets/dark-star-icon.png" data-value="2" class="star">
-              <img src="assets/dark-star-icon.png" data-value="3" class="star">
-              <img src="assets/dark-star-icon.png" data-value="4" class="star">
-              <img src="assets/dark-star-icon.png" data-value="5" class="star">
+              <img src="assets/dark-star-icon.png" alt="dark star" data-value="1" class="star">
+              <img src="assets/dark-star-icon.png" alt="dark star" data-value="2" class="star">
+              <img src="assets/dark-star-icon.png" alt="dark star" data-value="3" class="star">
+              <img src="assets/dark-star-icon.png" alt="dark star" data-value="4" class="star">
+              <img src="assets/dark-star-icon.png" alt="dark star" data-value="5" class="star">
             </div>
             <button type="submit" class="confirm-btn">Confirm</button>
           </form>
