Hide swipe hints

--- a/swipe.html
+++ b/swipe.html
@@ -33,7 +33,7 @@
   <main class="swipe-layout">
     <div class="swipe-container">
       
-      <!-- Left Hint -->
+      <!-- Left Hint 
       <div class="swipe-hint left-hint">
         <img src="assets/left-arrow.png" alt="Swipe Left" class="hint-icon" />
         <span class="hint-text">
@@ -41,6 +41,7 @@
           to get a new card
         </span>
       </div>
+      -->
 
       <!-- Left Reviews -->
       <div id="left-review-container"></div>
@@ -66,7 +67,7 @@
       <!-- Right Reviews -->
       <div id="right-review-container"></div>
       
-      <!-- Right Hint -->
+      <!-- Right Hint 
       <div class="swipe-hint right-hint">
         <img src="assets/right-arrow.png" alt="Swipe Right" class="hint-icon" />
         <span class="hint-text">
@@ -74,6 +75,7 @@
           to save to collection
         </span>
       </div>
+      -->
     </div>
 
 
