Polish swipe buttons

--- a/swipe.html
+++ b/swipe.html
@@ -55,10 +55,10 @@
         <!-- Accept / Reject Buttons -->
         <!-- Accept / Reject Buttons -->
         <div class="swipe-buttons">
-          <button class="button-type2" title="Reject">
+          <button title="Reject">
             <img src="assets/decline-icon.png" alt="Reject" />
           </button>
-          <button class="button-type2" title="Accept">
+          <button title="Accept">
             <img src="assets/accept-icon.png" alt="Accept" />
           </button>
         </div>
