Responsive mobile/desktop view

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
         <div class="instruction-step">
           <h1>2</h1>
-          <h2>Pick or Pass</h2>
-          <p>Browse restaurants and tap the check mark to save or X to skip</p>
+          <h2>Browse Your Next Bite</h2>
+          <p>Browse restaurants and tap the check mark to save or X to see more</p>
           <button class="button-type1" onclick="location.href='swipe.html'">Browse Cards</button>
         </div>
           
