Minimum rating UI and Logic html, css, Js (#147)
This PR updates the rating filter UI to match the design shown in the new Figma prototype. It replaces the numeric input with an interactive star-based selection (1–5 stars), styled and sized appropriately for both desktop and mobile views.

---------

Co-authored-by: hal117 <130006144+hal117@users.noreply.github.com>

--- a/filters.html
+++ b/filters.html
@@ -85,15 +85,10 @@
 
         <!-- Rating -->
         <section class="filter-options hidden" id="rating-options">
-          <h2>Set minimum rating</h2>
+          <h2>What is the lowest rating you will accept?</h2>
+          <div id="star-container" class="star-rating"></div>
           <form onsubmit="confirmSelection('rating'); return false;">
-            <input
-              type="number"
-              id="rating-input"
-              placeholder="Enter a number between 0 and 5 or leave blank if you don't care"
-              
-            />
-            <button type="submit" class="confirm-btn">Confirm</button>
+            <button type="submit" class="confirm-btn">Next</button>
           </form>
         </section>
     </main>
