--- a/filters.html
+++ b/filters.html
@@ -26,24 +26,24 @@
 
     <main>
         <!-- Progress Step Bar -->
-        <div class="progress-bar hidden">
-            <div class="step" data-step="cuisine">
+        <nav class="progress-bar hidden">
+            <button class="step" data-step="cuisine">
                 <span class="step-text">Cuisine</span>
                 <div class="step-line"></div>
-            </div>
-            <div class="step" data-step="price">
+            </button>
+            <button class="step" data-step="price">
                 <span class="step-text">Price</span>
                 <div class="step-line"></div>
-            </div>
-            <div class="step" data-step="distance">
+            </button>
+            <button class="step" data-step="distance">
                 <span class="step-text">Distance</span>
                 <div class="step-line"></div>
-            </div>
-            <div class="step" data-step="rating">
+            </button>
+            <button class="step" data-step="rating">
                 <span class="step-text">Rating</span>
                 <div class="step-line"></div>
-            </div>
-        </div>
+            </button>
+          </nav>
 
         <!-- Cuisine -->
         <section class="filter-options hidden" id="cuisine-options">
