Reverted buttons back to div to pass validation

--- a/filters.html
+++ b/filters.html
@@ -27,22 +27,22 @@
     <main>
         <!-- Progress Step Bar -->
         <nav class="progress-bar hidden">
-            <button class="step" data-step="cuisine">
+            <div class="step" data-step="cuisine">
                 <span class="step-text">Cuisine</span>
                 <div class="step-line"></div>
-            </button>
-            <button class="step" data-step="price">
+            </div>
+            <div class="step" data-step="price">
                 <span class="step-text">Price</span>
                 <div class="step-line"></div>
-            </button>
-            <button class="step" data-step="distance">
+            </div>
+            <div class="step" data-step="distance">
                 <span class="step-text">Distance</span>
                 <div class="step-line"></div>
-            </button>
-            <button class="step" data-step="rating">
+            </div>
+            <div class="step" data-step="rating">
                 <span class="step-text">Rating</span>
                 <div class="step-line"></div>
-            </button>
+            </div>
           </nav>
 
         <!-- Cuisine -->
