--- a/collection.html
+++ b/collection.html
@@ -9,7 +9,7 @@
     <script src="js/collection.js"></script>
     <title>Restaurant Crisis</title>
 </head>
-<body>
+<body> 
     <header>
         <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
         <!-- nav bar -->
@@ -25,7 +25,7 @@
 
     <main>
         <h2>Your deck</h2>
-        <div id="deck-list"></div>
+        <div id="deck-list" class="grid-container"></div>
         <button id="clear-deck-btn">Clear Deck</button>
     </main>
 
