Update favicon and titles

--- a/collection.html
+++ b/collection.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/collections.css">
     <script src="js/scripts.js"></script>
     <script src="js/collection.js"></script>
-    <title>Restaurant Crisis</title>
+    <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
+    <title>View Collection - FoodFlip</title>
 </head>
 <body>
     <header>
