--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="js/scripts.js"></script>
-    <title>Restaurant Crisis</title>
+    <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
+    <title>FoodFlip</title>
 </head>
 <body>
     <header>
