--- a/swipe.html
+++ b/swipe.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Swipe Restaurants</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Permanent+Marker&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
+  <title>Browse Restaurants - FoodFlip</title>
 </head>
 
 <body>
