improved Ui for summary

--- a/filters.html
+++ b/filters.html
@@ -110,12 +110,11 @@
     </main>
     <section id="summary" class="hidden">
       <h2>Your current filters</h2>
-
       <ul>
-        <li>Cuisine: <span id="sum-cuisine"></span></li>
-        <li>Max price: <span id="sum-price"></span></li>
-        <li>Max distance: <span id="sum-distance"></span></li>
-        <li>Min rating: <span id="sum-rating"></span></li>
+        <li>Cuisine: <span id="sum-cuisine">—</span></li>
+        <li>Max price: <span id="sum-price">—</span></li>
+        <li>Max distance: <span id="sum-distance">—</span></li>
+        <li>Min rating: <span id="sum-rating">—</span></li>
       </ul>
 
       <button id="done-btn">Done → Start swiping</button>
