void elements self-close

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/app-icon.png" alt="app_icon" class="app-icon">
+        <img src="assets/app-icon.png" alt="app_icon" class="app-icon" />
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
                 <li><a href="filters.html">Filters</a></li>
             </ul>
         </nav>
-        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon">
+        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" />
     </header>
 
     <main>
@@ -61,9 +61,9 @@
                                   <p>🕒 Open until XX:XX PM</p>
                                   <p>📞 XXX - XXX - XXXX</p>
                                   <div class="menu-images">
-                                    <img src="assets/food-example1.jpg" alt="food">
-                                    <img src="assets/food-example2.jpg" alt="food">
-                                    <img src="assets/food-example3.jpg" alt="food">
+                                    <img src="assets/food-example1.jpg" alt="food" />
+                                    <img src="assets/food-example2.jpg" alt="food" />
+                                    <img src="assets/food-example3.jpg" alt="food" />
                                   </div>
                                   <span class="view-menu">View Menu ↗</span>
                               </div>
@@ -112,9 +112,9 @@
                         <p>🕒 Open until XX:XX PM</p>
                         <p>📞 XXX - XXX - XXXX</p>
                         <div class="menu-images">
-                          <img src="assets/food-example1.jpg" alt="food">
-                          <img src="assets/food-example2.jpg" alt="food">
-                          <img src="assets/food-example3.jpg" alt="food">
+                          <img src="assets/food-example1.jpg" alt="food" />
+                          <img src="assets/food-example2.jpg" alt="food" />
+                          <img src="assets/food-example3.jpg" alt="food" />
                         </div>
                         <span class="view-menu">View Menu ↗</span>
                     </div>
