--- a/collection.html
+++ b/collection.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="description" content="Restaurant Crisis, a card app for discovering new places to eat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/collections.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/collections.css" />
     <script src="js/scripts.js"></script>
     <script src="js/collection.js"></script>
     <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
@@ -22,7 +22,7 @@
                 <li><a href="filters.html">Filters</a></li>
             </ul>
         </nav>
-        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon"> <!-- insert burger icon here!-->
+        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" /> <!-- insert burger icon here!-->
     </header>
 
 
